import "global.proto";
package org.shell.mmo.sample.message.proto;

// 登录:参数
message ReqLoginLogin {
    optional string usr = 1; // 账号
    optional Platform platform = 2; // 平台
    optional int32 server = 3; // 服务器
    optional bool adult = 4; // 是否成年
    optional int32 time = 5; // 时间戳
    optional string sign = 6; // 验证串
}
// 登录:返回值
message ResLoginLogin {
    optional Error error = 1; // 错误码
    optional LeaderRole leaderRole = 2; // 主角
}

