package org.shell.mmo.sample.message.proto;

// 坐标
message Position {
    required int32 x = 1; // 横坐标
    required int32 y = 2; // 纵坐标
}
// 主角
message LeaderRole {
    required fixed64 id = 1; // 角色id
    required string name = 2; // 名字
    required int32 map = 3; // 地图
    required int32 level = 4; // 等级
    required int32 server = 5; // 服务器
    required int32 platform = 6; // 平台
    required int32 gold = 7; // 元宝
}

// 错误码
enum Error {
    SYS_ERR = 1; // 系统错误
}
// 对象类型
enum GameObjectType {
    HERO = 1; // 英雄
    MONSTER = 2; // 怪物
    PET = 3; // 宠物
    ITEM = 4; // 道具
}
// 模块类型
enum Module {
    LOGIN = 1; // 登录
    FIGHT = 2; // 战斗
    MOVE = 3; // 移动
}
